--- a/mentorup/static/sass/project.scss
+++ b/mentorup/static/sass/project.scss
@@ -6,8 +6,32 @@
 // Variables
 $red-hot: #C0392B;
 $button-primary: $red-hot;
-$gray: rgb(189, 195, 199);
 $dark-blue: #2C3E50;
+
+$gray: hsla(203,18%,36%,1);
+$grey: hsla(203,18%,36%,1);
+$dark-grey: hsla(203,18%,25%,1);
+$dark-gray: hsla(203,18%,25%,1);
+
+// Typography
+body {
+  color: $grey; 
+}
+
+
+// Mixins
+@mixin box {
+    max-width: 100%;
+    padding: 4px;
+    line-height: 1.428571429;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 3px 3px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.15);
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
 
 .btn-redhot {
     background-color: $red-hot;
@@ -62,11 +86,41 @@ ul.socialaccount_providers li {
     font-size: 34px;
 }
 
-ul.user-attributes {
-    list-style: none;
-    padding-left: 0;
-}
 
-ul.user-attributes li {
-    padding-bottom: 10px;
+// Member detail page (including update / edit)
+
+body.member-detail {
+    .profile-basics-box {
+
+        @include box;
+        img {
+            min-width: 95%;
+        }
+
+        ul.user-attributes {
+            list-style: none;
+            padding-left: 0;
+
+            li {
+                padding-bottom: 10px;
+            }
+        }
+    }
+
+    .profile-content-box {
+        @include box;
+        padding: 10px 15px;
+
+        h2 {
+          display: inline-block;
+        }
+
+        .contact-me {
+            margin-top: 22px;
+        }
+    }
+
+    .content-wrapper {
+        margin-top: 30px;
+    }
 }
