--- a/mentorup/templates/users/user_detail.html
+++ b/mentorup/templates/users/user_detail.html
@@ -15,12 +15,11 @@
 
   <div class="col-sm-12">
     <ul class="nav nav-tabs">
-      <li class="active"><a href="#">View my profile</a></li>
-      <li><a href="{% url 'users:update' %}">Update my profile</a></li>
-      <li><a href="{% url 'account_email' %}">E-Mail</a></li>
-      <li><a href="{% url 'postman_inbox' %}">My messages</a></li>
-      <li><a href="{% url 'avatar_change' %}">Photo</a></li>
-      <li><a href="{% url 'socialaccount_connections' %}">Social Networks</a></li>
+      <li class="active"><a href="#">Dashboard</a></li>
+      <li><a href="{% url 'users:update' %}">Messages</a></li>
+      <li><a href="{% url 'postman_inbox' %}">Settings</a></li>
+{#      <li><a href="{% url 'avatar_change' %}">Photo</a></li>#}
+{#      <li><a href="{% url 'socialaccount_connections' %}">Social Networks</a></li>#}
     </ul>
   </div>
 
@@ -29,35 +28,31 @@
 
 {% endif %}
 
-<div class="row">
-  <div class="col-sm-1">
-    {% avatar object %}
-  </div>
+<div class="row wrapper content-wrapper">
+  <div class="col-sm-3">
+    <div class="profile-basics-box">
+      <center>
+        {% avatar object %}
+        <h2 class="user-name">{{ object.first_name }} {{ object.last_name }}</h2>
+        <ul class="user-attributes">
+          <li><a href="{% url 'users:detail' object.username %}"><i class="icon-user"></i>&nbsp;{{ object.username }}</a></li>
+          <li><i class="icon-map-marker"></i>&nbsp;{{ object.display_location }}</li>
+          {% if object.github_profile_url %}
+          <li><i class="icon-github"></i>&nbsp;<a href="{{ object.github_profile_url }}">{{ object.github_profile_url }}</a></li>
+          {% endif %}
 
-  <div class="col-sm-11">
-    {% if object != request.user %}
-    <div class="container pull-right">
-      <a href="{% url 'postman_write' object.username %}" class="btn btn-large btn-success"><i class="icon-envelope-alt"></i>&nbsp;Contact me</a>
+          {% if object == request.user %}
+            <li><a href="#">Edit profile</a><li>
+          {% endif %}
+        </ul>
+      </center>
     </div>
-    {% endif %}
-    <h2>{{ object.first_name }} {{ object.last_name }}</h2>
-    <ul class="user-attributes">
-      <li><a href="{% url 'users:detail' object.username %}"><i class="icon-user"></i>&nbsp;{{ object.username }}</a></li>
-      <li><i class="icon-map-marker"></i>&nbsp;{{ object.display_location }}</li>
-      {% if object.github_profile_url %}
-      <li><i class="icon-github"></i>&nbsp;<a href="{{ object.github_profile_url }}">{{ object.github_profile_url }}</a></li>
-    {% endif %}
-    </ul>
-
-    <h4>Personal introduction</h4>
-    <p>{{ object.short_bio }}</p>
-
-    <h4>My skills</h4>
-    <p>{{ object.display_skills_to_teach }}</p>
-
-    <h4>What I want to learn</h4>
-    <p>{{ object.display_skills_to_learn }}</p>
-
   </div>
+
+  {% if object != request.user %}  {# Two seperate sections for logged in / logged out #}
+    {% include 'includes/profile_detail_content.html' %}
+  {% else %}
+    {% include 'includes/profile_dashboard.html' %}
+  {% endif %}
 </div>
 {% endblock content %}
