--- a/mentorup/static/css/project.css
+++ b/mentorup/static/css/project.css
@@ -2,64 +2,64 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../sass/project.scss */
+/* line 18, ../sass/project.scss */
 body {
-  color: #4b606c;
+  color: #777777;
 }
 
-/* line 36, ../sass/project.scss */
+/* line 45, ../sass/project.scss */
 .btn-redhot {
   background-color: #c0392b;
 }
-/* line 38, ../sass/project.scss */
+/* line 47, ../sass/project.scss */
 .btn-redhot:hover, .btn-redhot:focus {
   background-color: #c0392b;
 }
 
-/* line 44, ../sass/project.scss */
+/* line 53, ../sass/project.scss */
 img.img-thumbnail {
   margin-bottom: 1%;
 }
 
-/* line 51, ../sass/project.scss */
+/* line 60, ../sass/project.scss */
 body.sign-in form.login {
   background: none;
   padding: 0;
   color: inherit;
 }
 
-/* line 59, ../sass/project.scss */
+/* line 68, ../sass/project.scss */
 body.members h2 {
   margin-bottom: 2%;
   padding-left: 15px;
 }
-/* line 64, ../sass/project.scss */
+/* line 73, ../sass/project.scss */
 body.members .list-bio {
   font-size: 22px;
 }
-/* line 68, ../sass/project.scss */
+/* line 77, ../sass/project.scss */
 body.members div.row.form-row {
   padding: 20px 0;
   border-bottom: 2px solid #eee;
   margin-bottom: 20px;
 }
-/* line 74, ../sass/project.scss */
+/* line 83, ../sass/project.scss */
 body.members .form-group {
   width: 100%;
   max-width: 100%;
 }
 
-/* line 81, ../sass/project.scss */
+/* line 90, ../sass/project.scss */
 ul.socialaccount_providers li {
   list-style: none;
 }
 
-/* line 85, ../sass/project.scss */
+/* line 94, ../sass/project.scss */
 .navbar-brand {
-  font-size: 34px;
+  font-size: 28px;
 }
 
-/* line 93, ../sass/project.scss */
+/* line 102, ../sass/project.scss */
 body.member-detail .profile-basics-box {
   max-width: 100%;
   padding: 4px;
@@ -71,21 +71,31 @@ body.member-detail .profile-basics-box {
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
+  background-color: #f9f9f9;
+  background-image: -moz-linear-gradient(bottom, white, #f2f2f2);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#f2f2f2));
+  background-image: -webkit-linear-gradient(bottom, white, #f2f2f2);
+  background-image: -o-linear-gradient(bottom, white, #f2f2f2);
+  background-image: linear-gradient(to top, #ffffff, #f2f2f2);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFF2F2F2', GradientType=0);
+  padding-top: 15px;
 }
-/* line 96, ../sass/project.scss */
+/* line 107, ../sass/project.scss */
 body.member-detail .profile-basics-box img {
   min-width: 95%;
+  padding: 0px;
 }
-/* line 100, ../sass/project.scss */
+/* line 112, ../sass/project.scss */
 body.member-detail .profile-basics-box ul.user-attributes {
   list-style: none;
   padding-left: 0;
 }
-/* line 104, ../sass/project.scss */
+/* line 116, ../sass/project.scss */
 body.member-detail .profile-basics-box ul.user-attributes li {
   padding-bottom: 10px;
 }
-/* line 110, ../sass/project.scss */
+/* line 122, ../sass/project.scss */
 body.member-detail .profile-content-box {
   max-width: 100%;
   padding: 4px;
@@ -97,17 +107,31 @@ body.member-detail .profile-content-box {
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  padding: 10px 15px;
+  background-color: #f9f9f9;
+  background-image: -moz-linear-gradient(bottom, white, #f2f2f2);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#f2f2f2));
+  background-image: -webkit-linear-gradient(bottom, white, #f2f2f2);
+  background-image: -o-linear-gradient(bottom, white, #f2f2f2);
+  background-image: linear-gradient(to top, #ffffff, #f2f2f2);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFF2F2F2', GradientType=0);
+  padding: 15px 15px;
 }
-/* line 114, ../sass/project.scss */
+/* line 126, ../sass/project.scss */
 body.member-detail .profile-content-box h2 {
   display: inline-block;
+  margin-top: 0px;
 }
-/* line 118, ../sass/project.scss */
-body.member-detail .profile-content-box .contact-me {
-  margin-top: 22px;
-}
-/* line 123, ../sass/project.scss */
+/* line 132, ../sass/project.scss */
 body.member-detail .content-wrapper {
   margin-top: 30px;
+}
+
+/* line 138, ../sass/project.scss */
+nav input {
+  min-width: 185px;
+}
+/* line 142, ../sass/project.scss */
+nav div.selectize-control.form-control {
+  padding-top: 5px;
 }
