--- a/mentorup/static/sass/project.scss
+++ b/mentorup/static/sass/project.scss
@@ -8,8 +8,9 @@ $red-hot: #C0392B;
 $button-primary: $red-hot;
 $dark-blue: #2C3E50;
 
-$gray: hsla(203,18%,36%,1);
-$grey: hsla(203,18%,36%,1);
+$gray: #777;
+$grey: $gray;
+
 $dark-grey: hsla(203,18%,25%,1);
 $dark-gray: hsla(203,18%,25%,1);
 
@@ -17,7 +18,6 @@ $dark-gray: hsla(203,18%,25%,1);
 body {
   color: $grey; 
 }
-
 
 // Mixins
 @mixin box {
@@ -31,6 +31,15 @@ body {
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.15);
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
+
+    background-color: #f9f9f9;
+    background-image: -moz-linear-gradient(bottom, white, #f2f2f2);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#f2f2f2));
+    background-image: -webkit-linear-gradient(bottom, white, #f2f2f2);
+    background-image: -o-linear-gradient(bottom, white, #f2f2f2);
+    background-image: linear-gradient(to top, #ffffff, #f2f2f2);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFF2F2F2', GradientType=0);
 }
 
 .btn-redhot {
@@ -83,7 +92,7 @@ ul.socialaccount_providers li {
 }
 
 .navbar-brand {
-    font-size: 34px;
+    font-size: 28px;
 }
 
 
@@ -93,8 +102,11 @@ body.member-detail {
     .profile-basics-box {
 
         @include box;
+        padding-top: 15px;
+
         img {
             min-width: 95%;
+            padding: 0px;
         }
 
         ul.user-attributes {
@@ -109,18 +121,25 @@ body.member-detail {
 
     .profile-content-box {
         @include box;
-        padding: 10px 15px;
+        padding: 15px 15px;
 
         h2 {
           display: inline-block;
-        }
-
-        .contact-me {
-            margin-top: 22px;
+          margin-top: 0px;
         }
     }
 
     .content-wrapper {
         margin-top: 30px;
+    }
+}
+
+nav {
+    input {
+        min-width: 185px;
+    }
+
+    div.selectize-control.form-control {
+        padding-top: 5px;
     }
 }
