--- a/mentorup/templates/users/user_detail.html
+++ b/mentorup/templates/users/user_detail.html
@@ -6,6 +6,11 @@
 {% block body_class %}member-detail{% endblock %}
 
 {% block content %}
+<script>
+  $(function () {
+    $('#myTab a:last').tab('show')
+  })
+</script>
 
 <div class="container">
 
@@ -15,13 +20,28 @@
 
   <div class="col-sm-12">
     <ul class="nav nav-tabs">
-      <li class="active"><a href="#">View my profile</a></li>
-      <li><a href="{% url 'users:update' %}">Update my profile</a></li>
-      <li><a href="{% url 'account_email' %}">E-Mail</a></li>
-      <li><a href="{% url 'postman_inbox' %}">My messages</a></li>
-      <li><a href="{% url 'avatar_change' %}">Photo</a></li>
-      <li><a href="{% url 'socialaccount_connections' %}">Social Networks</a></li>
+      <li class="active"><a href="#">Dashboard</a></li>
+      <li><a href="{% url 'postman_inbox' %}">Messages</a></li>
+      <li><a href="{% url 'users:update' %}">Settings</a></li>
+{#      <li><a href="{% url 'avatar_change' %}">Photo</a></li>#}
+{#      <li><a href="{% url 'socialaccount_connections' %}">Social Networks</a></li>#}
     </ul>
+  
+<!--     <ul class="nav nav-tabs" id="myTab">
+      <li class="active"><a <a data-toggle="tab" href="#dashboard">Dashboard</a></li>
+      <li><a data-toggle="tab" href="#messages">Messages</a></li>
+      <li><a data-toggle="tab" href="#profile">Profile</a></li>
+      <li><a data-toggle="tab" href="#settings">Settings</a></li>
+    </ul>
+
+    <div class="tab-content">
+      <div class="tab-pane active" id="dashboard">dashboard content</div>
+      <div class="tab-pane" id="messages">messages content</div>
+      <div class="tab-pane" id="profile">profile content</div>
+      <div class="tab-pane" id="settings">settings content</div>
+    </div> 
+  -->
+
   </div>
 
 </div>
