--- a/mentorup/templates/users/user_list.html
+++ b/mentorup/templates/users/user_list.html
@@ -5,6 +5,7 @@
 {% block title %}Mentor UP Members{% endblock %}
 {% block body_class %}members{% endblock %}
 
+
 {% block content %}
 
 <div class="container">
@@ -58,6 +59,6 @@
 
 {% endblock content %}
 
-{% block extra_javascript %} 
+{% block in_page_javascript %}
   {% include 'includes/repopulate-select.html' %}
 {% endblock %}
