--- a/mentorup/templates/includes/repopulate-select.html
+++ b/mentorup/templates/includes/repopulate-select.html
@@ -1,3 +1,4 @@
 <script>
   window.previouslySelectedSkills = {{ previously_selected_search_skills|safe }};
+  // window.previouslySelectedLocations = {{ previously_selected_locations|safe }};
 </script>
