--- a/mentorup/templates/users/user_detail.html
+++ b/mentorup/templates/users/user_detail.html
@@ -5,44 +5,19 @@
 {% block title %}User: {{ object.username }}{% endblock %}
 {% block body_class %}member-detail{% endblock %}
 
-{% block content %}
+{% block body_content %}
 
+{% block content %}
 <div class="container">
 
+{% block subnav %}
 {% if object == request.user %}
-<!-- Action buttons -->     
-<div class="row">
 
-  <div class="col-sm-12">
-    <ul class="nav nav-tabs">
-      <li class="active"><a href="#">Dashboard</a></li>
-      <li><a href="{% url 'postman_inbox' %}">Messages</a></li>
-      <li><a href="{% url 'users:update' %}">Settings</a></li>
-{#      <li><a href="{% url 'avatar_change' %}">Photo</a></li>#}
-{#      <li><a href="{% url 'socialaccount_connections' %}">Social Networks</a></li>#}
-    </ul>
-  
-<!--     <ul class="nav nav-tabs" id="myTab">
-      <li class="active"><a <a data-toggle="tab" href="#dashboard">Dashboard</a></li>
-      <li><a data-toggle="tab" href="#messages">Messages</a></li>
-      <li><a data-toggle="tab" href="#profile">Profile</a></li>
-      <li><a data-toggle="tab" href="#settings">Settings</a></li>
-    </ul>
 
-    <div class="tab-content">
-      <div class="tab-pane active" id="dashboard">dashboard content</div>
-      <div class="tab-pane" id="messages">messages content</div>
-      <div class="tab-pane" id="profile">profile content</div>
-      <div class="tab-pane" id="settings">settings content</div>
-    </div> 
-  -->
-
-  </div>
-
-</div>
-<!-- End Action buttons -->
+{% include 'users/_dashboard_menu.html' %}
 
 {% endif %}
+{% endblock subnav %}
 
 <div class="row wrapper content-wrapper">
   <div class="col-sm-3">
@@ -72,3 +47,4 @@
   {% endif %}
 </div>
 {% endblock content %}
+{% endblock body_content %}
