menus are working but not optimized

--- a/mentorup/templates/avatar/base.html
+++ b/mentorup/templates/avatar/base.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
 
 {% block title %}django-avatar{% endblock %}
+
+{% block subnav %}
+  {% include 'users/_dashboard_menu.html' %}
+{% endblock subnav %}
+
 {% block content %}{% endblock %}
