--- a/mentorup/templates/users/_dashboard_menu.html
+++ b/mentorup/templates/users/_dashboard_menu.html
@@ -6,28 +6,12 @@
   <div class="col-sm-12">
     {% activeurl menu="yes" parent_tag="li" %}
     <ul class="nav nav-tabs">
-      <li><a href="{% url 'users:detail' request.user %}">Dashboard</a></li>
-      <li><a href="{% url 'postman_inbox' %}">Messages</a></li>
-      <li><a href="{% url 'users:update' %}">Settings</a></li>
-{#      <li><a href="{% url 'avatar_change' %}">Photo</a></li>#}
-{#      <li><a href="{% url 'socialaccount_connections' %}">Social Networks</a></li>#}
+      <li><a href="{% url 'postman_inbox' %}"><i class="icon-envelope"></i>&nbsp;Messages</a></li>
+      <li><a href="{% url 'users:update' %}"><i class="icon-edit"></i>&nbsp;Edit Profile</a></li>
+      <li><a href="{% url 'avatar_change' %}"><i class="icon-picture"></i>&nbsp;Change Photo</a></li>
+      <li><a href="{% url 'socialaccount_connections' %}"><i class="icon-github-alt"></i>&nbsp;Connected Accounts</a></li>
     </ul>
     {% endactiveurl %}
-  
-<!--     <ul class="nav nav-tabs" id="myTab">
-      <li class="active"><a <a data-toggle="tab" href="#dashboard">Dashboard</a></li>
-      <li><a data-toggle="tab" href="#messages">Messages</a></li>
-      <li><a data-toggle="tab" href="#profile">Profile</a></li>
-      <li><a data-toggle="tab" href="#settings">Settings</a></li>
-    </ul>
-
-    <div class="tab-content">
-      <div class="tab-pane active" id="dashboard">dashboard content</div>
-      <div class="tab-pane" id="messages">messages content</div>
-      <div class="tab-pane" id="profile">profile content</div>
-      <div class="tab-pane" id="settings">settings content</div>
-    </div> 
-  -->
 
   </div>
 
