--- a/mentorup/templates/users/user_form.html
+++ b/mentorup/templates/users/user_form.html
@@ -7,7 +7,13 @@
     {% import_django_select2_css %}
 {% endblock %}
 
+{% block sub_nav %}
+{% include 'users/_dashboard_menu.html' %}
+{% endblock sub_nav %}
+
 {% block content %}
+
+<div class="pull-right"><a href="{% url 'users:detail' request.user %}" class="btn btn-primary">Preview profile</a></div>
 
 <div class="container">
     <h1>{% block header %}User: {{ user.username }}{% endblock %}</h1>
@@ -25,4 +31,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock content %}
