ProfileMixinRequired does not globally apply to the write buttons generated by postman.  Fixed a bug link to My Dashboard which led to the Inbox instead.

--- a/mentorup/templates/users/user_list.html
+++ b/mentorup/templates/users/user_list.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="col-sm-1 col-md-offset-1">
-          <a href="{% url 'users:postman_write_redirect' user.username %}" class="btn btn-large btn-success pull-right contact-me"><i class="icon-envelope-alt"></i>&nbsp;Contact me</a>
+          <a href="{% url 'postman_write' user.username %}" class="btn btn-large btn-success pull-right contact-me"><i class="icon-envelope-alt"></i>&nbsp;Contact me</a>
         </div>
       </a>
 
