Contact Me button Changes based on availability status

--- a/mentorup/templates/users/user_list.html
+++ b/mentorup/templates/users/user_list.html
@@ -44,7 +44,12 @@
         </div>
 
         <div class="col-sm-1 col-md-offset-1">
-          <a href="{% url 'postman_write' user.username %}" class="btn btn-large btn-success pull-right contact-me"><i class="icon-envelope-alt"></i>&nbsp;Contact me</a>
+          <a href="{% url 'postman_write' user.username %}" class="btn btn-large btn-success pull-right contact-me"><i class="icon-envelope-alt">
+            {% if user.available_to_teach %}
+              </i>&nbsp;Contact me</a>
+            {% else %}
+              </i>&nbsp;Unavailable</a>
+            {% endif %}
         </div>
       </a>
 
